<resources>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="app_name">百词斩</string>
    <string name="attention">注意</string>
    <string name="buy_tip">去天猫购买</string>
    <string name="cancel">取消</string>
    <string name="download_res_fail">资源下载失败</string>
    <string name="empty_list_retry">获取商品列表失败,点击重试</string>
    <string name="feedback_hint">我想说......</string>
    <string name="feedback_send">发送</string>
    <string name="feedback_send_empty">不能发送空消息</string>
    <string name="feedback_title">用户反馈</string>
    <string name="fight_alert_dialog_cancel">取消</string>
    <string name="fight_alert_dialog_ok">确认</string>
    <string name="fight_app_name">百词斩对战</string>
    <string name="fight_cannot_share">抱歉网络情况不大好，请稍后再分享数据吧</string>
    <string name="fight_challenger_accept">应战</string>
    <string name="fight_challenger_bar">TA已选你</string>
    <string name="fight_choose_him">选TA</string>
    <string name="fight_colon">:</string>
    <string name="fight_confirm_delete_friend">真的要删除TA吗？</string>
    <string name="fight_correct">CORRECT</string>
    <string name="fight_default_wait_result_prompt">客官稍等一下ε=ε=ε=┌(;￣◇￣)┘</string>
    <string name="fight_delete_friend">删除</string>
    <string name="fight_friend_rank_empty_text">暂时没有您的排名数据</string>
    <string name="fight_friend_ranking">好友排行</string>
    <string name="fight_guide">搜寻身边少侠 开始对战</string>
    <string name="fight_hyphen">-</string>
    <string name="fight_lose">LOSE</string>
    <string name="fight_random_match_button">随机约一个</string>
    <string name="fight_random_match_waiting_tip">系统正在为您匹配对手，请稍候</string>
    <string name="fight_ranking">RANKING</string>
    <string name="fight_share_score">晒战绩</string>
    <string name="fight_share_total_score_slogan">我今天百词斩单词对战成绩在朋友中排名第%1$d</string>
    <string name="fight_slash">/</string>
    <string name="fight_text_fight">Fight</string>
    <string name="fight_text_locating">正在定位</string>
    <string name="fight_text_matching">搜索中</string>
    <string name="fight_time">TIME</string>
    <string name="fight_tip_answer_error">您答错了哦</string>
    <string name="fight_tip_avatar_null">抱歉，无法获取用户信息</string>
    <string name="fight_tip_err_net_diabled">网络未连接</string>
    <string name="fight_tip_err_net_unspec">网络错误</string>
    <string name="fight_tip_err_timeout">网络不稳定，请在网络顺畅的环境下答题</string>
    <string name="fight_tip_location_fail">定位失败，请检查网络连接</string>
    <string name="fight_tip_match_timeout">匹配超时，请重新匹配</string>
    <string name="fight_tip_not_select_me_long">TA可能有别人了，换一个试试？</string>
    <string name="fight_tip_not_select_me_short">TA没有应战，请稍后</string>
    <string name="fight_tip_on_err_server_part_exit">您的对手逃跑了</string>
    <string name="fight_tip_on_ready">等待对方准备</string>
    <string name="fight_tip_random_matched">附近找不到对手，系统随机匹配一个</string>
    <string name="fight_tip_result_null">获取结果失败</string>
    <string name="fight_tip_wait_judge_timeout">等待判决超时</string>
    <string name="fight_tip_wait_start_timeout">等待对手准备超时</string>
    <string name="fight_total_score">今日战绩</string>
    <string name="fight_unit_second">S</string>
    <string name="fight_vs_again">还要约TA</string>
    <string name="fight_win">WIN</string>
    <string name="fm_data_err">电台数据出错，请退出重新进入~</string>
    <string name="fm_default_content_desc">null</string>
    <string name="fm_download_all">下载离线包</string>
    <string name="fm_download_all_failed">下载失败</string>
    <string name="fm_download_all_failed_offline">没有网络</string>
    <string name="fm_download_all_finished">下载完成</string>
    <string name="fm_load_warn_msg_down_mobile">在移动网络下会消耗一定的流量哦，确定要播放在线电台么？</string>
    <string name="fm_load_warn_play_offline">仅播放离线</string>
    <string name="fm_load_warn_title">注意</string>
    <string name="fm_no_fms">没有可播放的电台</string>
    <string name="fm_notificaiton_ticker">百词斩单词电台</string>
    <string name="fm_notification_subtitle">点击进入</string>
    <string name="fm_notification_title">百词斩单词电台</string>
    <string name="fm_play_no_offline">没有离线电台</string>
    <string name="fm_play_offline">即将播放离线电台</string>
    <string name="fm_review">复习一下</string>
    <string name="fm_review_en">REVIEW</string>
    <string name="fm_send_err">词条报错</string>
    <string name="fm_settings_clear_do">清除</string>
    <string name="fm_settings_clear_failed">电台内存清除失败</string>
    <string name="fm_settings_clear_mem">清除音频所占用空间</string>
    <string name="fm_settings_clear_mem_sub">大约 %s M</string>
    <string name="fm_settings_clear_success">电台内存清除成功</string>
    <string name="fm_settings_clear_warn_msg">%s确定要清除已下载的电台么？</string>
    <string name="fm_settings_download_high">下载高质量音频</string>
    <string name="fm_settings_download_high_sub">大约 %s M</string>
    <string name="fm_settings_loop">循环 %d 遍</string>
    <string name="fm_settings_loop_sub">大约需要 %d 分钟</string>
    <string name="fm_settings_plus">每次加量听 %d 词</string>
    <string name="fm_start_tip_count">您会听到%d个单词</string>
    <string name="fm_start_tip_time">大约需要%d分钟</string>
    <string name="fmtv_enter_failed_networks">初始化数据下载失败</string>
    <string name="fmtv_enter_failed_unknown">数据初始化失败</string>
    <string name="forget_the_word">不记得</string>
    <string name="friend_confirm_delete_message">大侠三思！真的要和TA恩断义绝吗？</string>
    <string name="friend_current_book_label">正在背：</string>
    <string name="friend_current_vocabulary_label">单词量：</string>
    <string name="friend_default_empty_feed1">&lt;font color=\"#909090\" size=\"30px\"&gt;第一次看好友动态, 感觉有点小激动呢~ \10只要 &lt;/font&gt;&lt;font color=\"#DEA56A\" size=\"30px\"&gt;背了单词&lt;/font&gt;&lt;font color=\"#909090\" size=\"30px\"&gt;, &lt;/font&gt;&lt;font color=\"#6AC1DE\" size=\"30px\"&gt;玩了PK&lt;/font&gt;&lt;font color=\"#909090\" size=\"30px\"&gt;, 相关的好友动态都会在这里 &lt;/font&gt;</string>
    <string name="friend_default_empty_feed2">&lt;font color=\"#909090\" size=\"30px\"&gt;带上好友, 一起进步吧~&lt;/font&gt;</string>
    <string name="friend_empty_friends_prompt">点击右上角图标\10添加好友</string>
    <string name="friend_empty_older_feed">大侠，没有更早的动态了</string>
    <string name="friend_error_search_key_empty">查询名称不能为空，请重新输入</string>
    <string name="friend_error_search_key_too_long">搜索关键字过长</string>
    <string name="friend_feed_tab_text">动态</string>
    <string name="friend_friend_tab_text">好友</string>
    <string name="friend_has_added">已添加</string>
    <string name="friend_has_invited">已邀请</string>
    <string name="friend_has_refused">已忽略</string>
    <string name="friend_last_week">上周</string>
    <string name="friend_loading_friends_prompt">正在加载中\10请稍候</string>
    <string name="friend_notifications_empty_prompt">您没有待处理的好友请求了</string>
    <string name="friend_operation_add">同意</string>
    <string name="friend_operation_cancel">取消</string>
    <string name="friend_operation_invite">邀请</string>
    <string name="friend_operation_refuse">忽略</string>
    <string name="friend_operation_search">搜索</string>
    <string name="friend_peer_accept">通过了你的好友请求</string>
    <string name="friend_peer_apply">想加你为好友</string>
    <string name="friend_search_hint">输入好友昵称</string>
    <string name="friend_search_result">搜索结果</string>
    <string name="friend_suggestion_label">推荐的好友</string>
    <string name="friend_system_suggestion_empty_prompt">暂时没有推荐的好友</string>
    <string name="friend_this_week">本周</string>
    <string name="friend_title_notifications">好友申请</string>
    <string name="friend_vocabulary_zero">未测试</string>
    <string name="friend_week_single_tip">额...你的榜单有点寂寞啊，带上好友一起刷榜吧</string>
    <string name="friend_week_tab_text">排行榜</string>
    <string name="friend_word">词</string>
    <string name="has_finished">已完成%s</string>
    <string name="i_dont_want">不要</string>
    <string name="i_want">要</string>
    <string name="internet_3g">3G状态，请注意你的流量.</string>
    <string name="internet_wifi">Wifi,可以放心使用</string>
    <string name="item_get_failed">获取商品失败,点击重试</string>
    <string name="item_selfcheck">单词自检</string>
    <string name="item_walkandlisten">边走边听</string>
    <string name="item_wordlist">单词列表</string>
    <string name="kill">斩</string>
    <string name="loading">loading…</string>
    <string name="loading_data">正在加载</string>
    <string name="loading_progress">加载中，请稍候</string>
    <string name="main_alert_message_delete_schedule">您已经跟“%1$s上的%2$d个单词”过过招，您这一%3$s，可就挽回不了啊， 连服务器包大人都不能帮你找回啊，慎重啊，%4$s</string>
    <string name="main_alert_message_download_problem">木有WIFI?! 10个单词0.6M，小心钱包变瘦!</string>
    <string name="main_alert_negative_cancel">取消</string>
    <string name="main_alert_negative_common">算了，我手抖点到的</string>
    <string name="main_alert_negative_giveup">算了</string>
    <string name="main_alert_positive_confirm">确定</string>
    <string name="main_alert_positive_delete_schedule">废话!删掉</string>
    <string name="main_alert_positive_reset_schedule">废话!重置</string>
    <string name="main_alert_positive_wealthy">继续!我有的是银子</string>
    <string name="main_bind_account_title">您当前使用的是试用账号。\10为了不让之前的学习功亏一篑，\10建议立即绑定帐号</string>
    <string name="main_bind_email">绑定邮箱</string>
    <string name="main_combo_count">最大COMBO %1$d</string>
    <string name="main_comfriming_from_server">验证中，请稍候…</string>
    <string name="main_default_content_desc">百词斩</string>
    <string name="main_email_empty">邮箱地址不能为空</string>
    <string name="main_guide_ask">新手向导包大人在此~大侠需要教学否?</string>
    <string name="main_guide_combo">连续做对COMBO有助于您集中精神，\10记忆效果也会更好噢~</string>
    <string name="main_guide_done_wrong">选错了？没关系！少侠定定神看清\10句子再选噢。也可以来点提示</string>
    <string name="main_guide_first_blood">【斩】=【屏蔽】，点击【斩】后，\10你将不再学习这个单词。</string>
    <string name="main_guide_heng">哼~</string>
    <string name="main_guide_wiki_gesture_part1">Good job！顺便告诉您：</string>
    <string name="main_guide_wiki_gesture_part2">《 向左划</string>
    <string name="main_guide_wiki_gesture_part3">可以查看上一个已学单词噢</string>
    <string name="submit">提交</string>
    <string name="word_error_feedback_hint">有任何问题都可以提，让斩家的编辑们来修改哦~</string>
    <string name="word_error_feedback_limit">限制%d字</string>
    <string name="word_error_feedback_title">词条报错：%s</string>
    <string name="wordlist_header_edit">编辑</string>
    <string name="wordlist_header_word_cnmean">释义</string>
    <string name="wordlist_header_word_count">单词（%d个）</string>
    <string name="wordlist_header_wrong_count">错误次数</string>
    <string name="wordtesting_auto_pop_exit">不要嘛~</string>
    <string name="wordtesting_auto_pop_test">马上测</string>
    <string name="wordtesting_content_desc_default">none</string>
    <string name="wordtesting_hard_work_tip">辛苦学习那么多天…</string>
    <string name="wordtesting_stats_hx_week1">第一周</string>
    <string name="wordtesting_stats_hx_week10">第十周</string>
    <string name="wordtesting_stats_hx_week2">第二周</string>
    <string name="wordtesting_stats_hx_week3">第三周</string>
    <string name="wordtesting_stats_hx_week4">第四周</string>
    <string name="wordtesting_stats_hx_week5">第五周</string>
    <string name="wordtesting_stats_hx_week6">第六周</string>
    <string name="wordtesting_stats_hx_week7">第七周</string>
    <string name="wordtesting_stats_hx_week8">第八周</string>
    <string name="wordtesting_stats_hx_week9">第九周</string>
    <string name="wordtesting_stimulate_tip">来测一下词汇量\10有没有增长吧？</string>
</resources>