<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:internal="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week1" android:layout_width="40dp" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="8dp" android:text="@string/wordtesting_stats_hx_week1" android:layout_below="@+id/wordtesting_stats_table"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week2" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week2" android:layout_toRightOf="@+id/wordtesting_stats_vh_week1" android:layout_alignTop="@+id/wordtesting_stats_vh_week1"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week3" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week3" android:layout_toRightOf="@+id/wordtesting_stats_vh_week2" android:layout_alignTop="@+id/wordtesting_stats_vh_week2"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week4" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week4" android:layout_toRightOf="@+id/wordtesting_stats_vh_week3" android:layout_alignTop="@+id/wordtesting_stats_vh_week3"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week5" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week5" android:layout_toRightOf="@+id/wordtesting_stats_vh_week4" android:layout_alignTop="@+id/wordtesting_stats_vh_week4"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week6" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week6" android:layout_toRightOf="@+id/wordtesting_stats_vh_week5" android:layout_alignTop="@+id/wordtesting_stats_vh_week5"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week7" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week7" android:layout_toRightOf="@+id/wordtesting_stats_vh_week6" android:layout_alignTop="@+id/wordtesting_stats_vh_week6"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week8" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week8" android:layout_toRightOf="@+id/wordtesting_stats_vh_week7" android:layout_alignTop="@+id/wordtesting_stats_vh_week7"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week9" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week9" android:layout_toRightOf="@+id/wordtesting_stats_vh_week8" android:layout_alignTop="@+id/wordtesting_stats_vh_week8"/>
    <TextView android:textSize="@dimen/wordtesting_stats_hx_week_size" android:textColor="#ff999999" android:gravity="center" android:id="@+id/wordtesting_stats_vh_week10" android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/wordtesting_stats_hx_week10" android:layout_toRightOf="@+id/wordtesting_stats_vh_week9" android:layout_alignTop="@+id/wordtesting_stats_vh_week9"/>
</merge>
