<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:internal="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <View android:id="@+id/fb_bg_mask" android:background="#b2000000" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <RelativeLayout android:id="@+id/fb_window" android:background="?attr/drawable_line_wiki" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="100dp" android:layout_marginTop="10dp" android:layout_marginRight="100dp" android:layout_marginBottom="10dp">
        <TextView android:textSize="@dimen/T3" android:textColor="?attr/color_fm_firstcard" android:gravity="center" android:id="@+id/fb_title" android:layout_width="wrap_content" android:layout_height="38dp" android:text="@string/word_error_feedback_title" android:layout_centerHorizontal="true"/>
        <com.baicizhan.client.business.widget.DisableMultilineIMEEditText android:textSize="@dimen/T2" android:textColor="?attr/color_type_text" android:textColorHint="?attr/color_type_text" android:gravity="top" android:id="@+id/fb_edit" android:background="?attr/drawable_bg_text" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="48dp" android:hint="@string/word_error_feedback_hint" android:layout_below="@+id/fb_title" android:imeOptions="actionUnspecified|actionGo|flagNoExtractUi"/>
        <TextView android:textSize="@dimen/T2" android:textColor="?attr/color_type_text" android:gravity="center" android:id="@+id/fb_limit" android:layout_width="wrap_content" android:layout_height="48dp" android:text="@string/word_error_feedback_limit" android:layout_alignLeft="@+id/fb_edit" android:layout_alignParentBottom="true"/>
        <TextView android:textSize="@dimen/T2" android:textColor="?attr/color_common_white" android:gravity="center" android:id="@+id/fb_submit" android:layout_width="85dp" android:layout_height="28dp" android:layout_marginBottom="10dp" android:text="@string/submit" android:layout_alignRight="@+id/fb_edit" android:layout_alignParentBottom="true"/>
        <TextView android:textSize="@dimen/T2" android:textColor="?attr/color_button_text" android:gravity="center" android:id="@+id/fb_cancel" android:background="?attr/drawable_button_line" android:layout_width="85dp" android:layout_height="28dp" android:layout_marginRight="8dp" android:layout_marginBottom="10dp" android:text="@string/cancel" android:layout_toLeftOf="@+id/fb_submit" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>
