<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:internal="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/wordtesting_close" android:background="@drawable/business_close_selector" android:layout_width="@dimen/main_back_width" android:layout_height="@dimen/main_back_height" android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:layout_alignParentRight="true" android:contentDescription="@string/wordtesting_content_desc_default"/>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="@dimen/wordtesting_hard_word_tip_size" android:textColor="#ff9b9b9b" android:id="@+id/wordtesting_hard_work" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/wordtesting_hard_work_tip"/>
        <TextView android:textSize="@dimen/wordtesting_stimulate_tip_size" android:textColor="#ff29c4f4" android:id="@+id/wordtesting_stimulate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wordtesting_stimulate_tip" android:layout_below="@+id/wordtesting_hard_work" android:layout_alignLeft="@+id/wordtesting_hard_work"/>
        <ImageView android:id="@+id/wordtesting_bao_dancing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:src="@drawable/wordtesting_bao_dancing" android:scaleType="fitCenter" android:layout_toRightOf="@+id/wordtesting_stimulate" android:layout_alignBottom="@+id/wordtesting_stimulate" android:contentDescription="@string/wordtesting_content_desc_default"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48dp" android:layout_below="@+id/wordtesting_stimulate">
            <com.baicizhan.client.business.view.StrokeButton android:textSize="@dimen/wordtesting_auto_pop_ctrl_text_size" android:id="@+id/wordtesting_exit" android:layout_width="156dp" android:layout_height="46dp" android:layout_marginLeft="16dp" android:layout_marginRight="30dp" android:text="@string/wordtesting_auto_pop_exit" app:business_style="blue"/>
            <Button android:textSize="@dimen/wordtesting_auto_pop_ctrl_text_size" android:textColor="@color/wordtesting_common_white" android:id="@+id/wordtesting_to_test" android:background="@drawable/wordtesting_score_button" android:layout_width="156dp" android:layout_height="46dp" android:text="@string/wordtesting_auto_pop_test"/>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar android:id="@+id/wordtesting_auto_pop_load_prog" android:visibility="gone" android:layout_width="match_parent" android:layout_height="3dp" android:progressDrawable="@drawable/business_progress_horizontal" android:indeterminateDuration="100" android:layout_alignParentBottom="true" style="?android:attr/progressBarStyleHorizontal"/>
</RelativeLayout>
