<?xml version="1.0" encoding="utf-8"?>
<com.baicizhan.client.p029fm.view.FmSettingsView xmlns:internal="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/fm_settings_panel" android:layout_width="275dp" android:layout_height="wrap_content">
    <ImageView android:layout_gravity="right" android:id="@+id/fm_triangle" android:paddingRight="13dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="-2dp" android:src="@drawable/triangle_white_normal_default" android:contentDescription="@string/fm_default_content_desc"/>
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_window_normal_default" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/fm_settings_download_high_wrapper" android:layout_width="match_parent" android:layout_height="48dp">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_centerVertical="true">
                <TextView android:textSize="@dimen/business_fs4" android:textColor="@color/C35" android:id="@+id/fm_settings_download_high" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fm_settings_download_high"/>
                <TextView android:textSize="@dimen/business_fs1" android:textColor="@color/C22" android:id="@+id/fm_settings_download_high_sub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fm_settings_download_high_sub"/>
            </LinearLayout>
            <com.kyleduo.switchbutton.SwitchButton android:id="@+id/fm_settings_download_high_switch" android:layout_width="50dp" android:layout_height="25dp" android:layout_marginRight="3dp" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View android:background="@color/C34" android:layout_width="match_parent" android:layout_height="1px"/>
        <RelativeLayout android:id="@+id/fm_settings_clear_mem_wrapper" android:layout_width="match_parent" android:layout_height="48dp">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_centerVertical="true">
                <TextView android:textSize="@dimen/business_fs4" android:textColor="@color/C35" android:id="@+id/fm_settings_clear_mem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fm_settings_clear_mem"/>
                <TextView android:textSize="@dimen/business_fs1" android:textColor="@color/C22" android:id="@+id/fm_settings_clear_mem_sub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fm_settings_clear_mem_sub"/>
            </LinearLayout>
            <com.baicizhan.client.business.view.StrokeButton android:textSize="@dimen/business_fs4" android:id="@+id/fm_settings_clear_do" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="11dp" android:text="@string/fm_settings_clear_do" android:layout_alignParentRight="true" android:layout_centerVertical="true" app:business_hasStroke="false" app:business_normal_text_color="@color/C12" app:business_pressed_text_color="@color/C33"/>
        </RelativeLayout>
        <View android:background="@color/C34" android:layout_width="match_parent" android:layout_height="1px"/>
        <RelativeLayout android:id="@+id/fm_settings_loop_wrapper" android:layout_width="match_parent" android:layout_height="48dp">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_centerVertical="true">
                <TextView android:textSize="@dimen/business_fs4" android:textColor="@color/C35" android:id="@+id/fm_settings_loop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fm_settings_loop"/>
                <TextView android:textSize="@dimen/business_fs1" android:textColor="@color/C22" android:id="@+id/fm_settings_loop_sub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fm_settings_loop_sub"/>
            </LinearLayout>
            <ImageView android:id="@+id/fm_settings_loop_plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:src="@drawable/itemstepper_plus_default" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/fm_default_content_desc"/>
            <ImageView android:id="@+id/fm_settings_loop_minus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/itemstepper_minus_default" android:layout_toLeftOf="@+id/fm_settings_loop_plus" android:layout_centerVertical="true" android:contentDescription="@string/fm_default_content_desc"/>
        </RelativeLayout>
        <View android:background="@color/C34" android:layout_width="match_parent" android:layout_height="1px"/>
        <RelativeLayout android:id="@+id/fm_settings_plus_wrapper" android:layout_width="match_parent" android:layout_height="48dp">
            <TextView android:textSize="@dimen/business_fs4" android:textColor="@color/C35" android:id="@+id/fm_settings_plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:text="@string/fm_settings_plus" android:layout_centerVertical="true"/>
            <ImageView android:id="@+id/fm_settings_plus_plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:src="@drawable/itemstepper_plus_default" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/fm_default_content_desc"/>
            <ImageView android:id="@+id/fm_settings_plus_minus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/itemstepper_minus_default" android:layout_toLeftOf="@+id/fm_settings_plus_plus" android:layout_centerVertical="true" android:contentDescription="@string/fm_default_content_desc"/>
        </RelativeLayout>
    </LinearLayout>
</com.baicizhan.client.p029fm.view.FmSettingsView>
