<?xml version="1.0" encoding="utf-8"?>
<com.baicizhan.client.fight.customview.FriendRankView xmlns:internal="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <TextView android:textSize="@dimen/fight_friend_score_text_size" android:textColor="@color/fight_def_blue_color" android:gravity="left" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/fight_ranking" android:layout_weight="1"/>
        <TextView android:textSize="@dimen/fight_friend_score_text_size" android:textColor="@color/fight_def_blue_color" android:gravity="center" android:layout_width="@dimen/fight_friend_score_width" android:layout_height="wrap_content" android:text="@string/fight_win"/>
        <TextView android:textSize="@dimen/fight_friend_score_text_size" android:textColor="@color/fight_def_gray_color" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="@dimen/fight_friend_score_width" android:layout_height="wrap_content" android:text="@string/fight_lose"/>
    </LinearLayout>
    <View android:background="@color/fight_def_blue_color" android:layout_width="match_parent" android:layout_height="@dimen/fight_friend_rank_divider_height"/>
    <com.handmark.pulltorefresh.library.PullToRefreshListView android:id="@+id/friend_rank_list" android:scrollbars="none" android:fadingEdge="none" android:layout_width="match_parent" android:layout_height="match_parent" android:listSelector="#00000000" android:cacheColorHint="#00000000" android:divider="@null" app:ptrHeaderTextColor="@color/fight_def_gray_color" app:ptrShowIndicator="false"/>
    <TextView android:textSize="@dimen/fight_friend_nickname_text_size" android:textColor="@color/fight_def_gray_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/friend_rank_empty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/fight_friend_rank_empty_text" android:singleLine="true"/>
</com.baicizhan.client.fight.customview.FriendRankView>
