<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:internal="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/T2" android:textColor="?attr/color_button_text_mediabar" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_guide_wiki_gesture_part1"/>
    <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <com.baicizhan.client.business.widget.RoundedButton android:enabled="false" android:textSize="@dimen/T2" android:textColor="?attr/color_common_white" android:gravity="center" android:layout_gravity="center_vertical" android:paddingLeft="1dp" android:paddingTop="2dp" android:paddingRight="3dp" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:text="@string/main_guide_wiki_gesture_part2" app:cornerRadius="4dp" app:fillColor="?attr/color_progress"/>
        <TextView android:textSize="@dimen/T2" android:textColor="?attr/color_button_text_mediabar" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_guide_wiki_gesture_part3"/>
    </LinearLayout>
</LinearLayout>
